# shop-present

./: .env.example  .flake8  .gitignore  Dockerfile  Dockerfile-bd  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pylintrc  pyproject.toml  start.sh
dataset/: __init__.py  __main__.py  alembic.ini  app.py  auth.py  config.py  db.py  exceptions.py  middlewares.py  routes.py  schedule.py
dataset/core/: __init__.py  auth.py  constants.py  container.py  db.py  err_msgs.py  graphql.py  log.py  utils.py
dataset/core/mail/: __init__.py  utils.py
dataset/graphql_/: __init__.py  application.py  operator.py  order.py  payment_data.py  payment_type.py
dataset/graphql_/user/: __init__.py  admin.py  public.py  utils.py
dataset/handlers/: forms.py
dataset/i18n/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  pl.yaml  pt.yaml  ru.yaml  zh.yaml
dataset/integrations/: aws.py  integration.py  mailgun.py  payment_systems.py  zendesk.py
dataset/mail_templates/: __init__.py
dataset/mail_templates/html/: donate-notification.html  email-change-request.html  email-confirm-landing-reg.html  email-confirm-landing.html  email-confirmation.html  email-refer.html  new-change-email.html  new-change-password.html  new-confirm-registration.html  new-password-recovery.html  new-refer-activation.html  new-support.html  new-transfer.html  password-recovery.html  share-refer-link.html  transfer-accepted.html  transfer-autoaccepted.html  transfer-autoconfirmed.html  transfer-confirmed.html  transfer-sent.html
dataset/mail_templates/html/layouts/: base.html  new-base.html
dataset/mail_templates/mjml/: email-confirmation.mjml  new-transfer.mjml  password-recovery.mjml  transfer-accepted.mjml  transfer-autoaccepted.mjml  transfer-autoconfirmed.mjml  transfer-confirmed.mjml  transfer-sent.mjml
dataset/mail_templates/mjml/layout/: base.mjml
dataset/migrations/: __init__.py  env.py
dataset/migrations/versions/: 1f3aa78e2a7d_create_kit_model.py  2e5641c03332_create_citizens_relations_imports.py  3f1c72979db7_create_kit_model.py  6aee5892ed50_create_kit_model.py
dataset/rest/: permissions.py
dataset/rest/models/: achievement.py  admin.py  auth_reg.py  category.py  chat.py  country.py  currency.py  donation.py  dream.py  event.py  exchange_rate.py  facebook.py  hooks.py  images.py  kit.py  news.py  notifications.py  payment.py  profile.py  recaptcha.py  referal.py  review.py  types.py  user.py  utils.py
dataset/rest/views/: achievement.py  admin.py  auth.py  base.py  category.py  chat.py  commento.py  country.py  currency.py  custom_paginate.py  donation.py  dream.py  event.py  event_tasks.py  exchange_rate.py  facebook.py  hooks.py  kit.py  news.py  notifications.py  payment.py  profile.py  referal.py  registration.py  review.py  test.py  users_export.py  utils.py
dataset/schema/: __init__.py  admin.py  public.py  queries.py
dataset/services/: __init__.py  notification.py  review.py  subscriptions.py  translations.py
dataset/tables/: __init__.py  achievement.py  admin_settings.py  application.py  citizens.py  country.py  currency.py  default_message.py  donate_size.py  donation.py  dream.py  dream_form.py  event.py  kit.py  message.py  notification.py  operator.py  order.py  payment_data.py  payment_type.py  pg_tables.py  post.py  review.py  user.py
dataset/templates/: mail_insertion.html
dataset/utils/: app.py  common.py  hooks.py  tokens.py  user.py
tests/: __init__.py  conftest.py  factories.py  fixture.py  json_queries.py  pytest.ini  test_requests.py  utils.py
