[tool.poetry]
name = "shop-present"
version = "0.1.0"
description = ""
authors = ["Timur Atambaev <timur.atambaev@webpp.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"
sqlalchemy = {version ="^1.4.41", extras=["asyncio"]}
aiohttp = "^3.8.4"
loguru = "0.5.3"
fastapi = "0.67.0"
httpx = "0.23.3"
uvicorn = {version = "0.14.0", extras = ["standard"]}
fastapi-utils = "0.2.1"
python-multipart = "0.0.5"
fastapi-pagination = "0.8.2"
shortuuid = "1.0.1"
virtualenv = "20.10.0"
gunicorn = "20.1.0"
SQLAlchemy-Utils = "0.38.2"
sqlalchemy-stubs = "^0.4"
pip = "^22.2.2"
nest-asyncio = "1.5.6"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = ">=3.8"
coverage = "^6.3.2"
flake8-logging-format = "^0.7.5"
flake8-alfred = "^1.1.1"
flake8-bugbear = "^22.3.23"
flake8-builtins = "^1.5.3"
flake8-coding = "^1.3.2"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.8.0"
flake8-debugger = "^4.0.0"
flake8-eradicate = "^1.2.0"
flake8-multiline-containers = "^0.0.18"
flake8-pep3101 = "^1.3.0"
flake8-print = "^4.0.0"
flake8-pytest-style = "^1.6.0"
flake8-return = "^1.1.3"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.2"
flake8-SQL = "0.3.0"
pep8-naming = ">0.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-isort = "^4.1.1"
flake8-annotations = "^2.8.0"
types-requests = "^2.27.16"
flake8-docstrings = "^1.6.0"
pytest-asyncio = "0.20.1"
pytest-env = "0.8.1"
factory-boy = "3.2.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = ["TESTING=True", "TZ=UTC", "GS_ENVIRONMENT=test"]
filterwarnings = [
    "ignore:.*.Arguments instead of.*:DeprecationWarning",
    "ignore:.*'collections' instead of from 'collections.abc'.*:DeprecationWarning",
    "ignore:.*'context' alias has been deprecated.*:DeprecationWarning",
    "ignore:.*'variables' alias has been deprecated.*:DeprecationWarning",
    "ignore:.*\"algorithms\" argument when calling decode().*:DeprecationWarning",
    "ignore:.*deprecated alias for the builtin `float`.*:DeprecationWarning",
]

[tool.black]
line-length = 79
include = '\.py$'
exclude = '''
(
    /(
        \.git
      | \.mypy_cache
      | env
      | test-reports
      | ptvs_virtualenv_proxy.py
      | migrations
      | venv
    )/
    | goldstream/__init__.py
)

'''

[tool.isort]
line_length = 79
py_version=39
skip="migrations"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
profile="black"
